welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:22: error: not found: value le
le probleme se trouve au niveau de la lettre R 
^